--- a/Website/src/App.css
+++ b/Website/src/App.css
@@ -1,30 +1,17 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+  flex: 1 0 auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 
 .App-link {
   color: #fdfdfd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .whiteLogo {
   position: absolute;
   left: 73.6em;
+}
+
+.foot {
+  flex-shrink: 0;
 }
