--- a/Website/src/Components/component/Campus.css
+++ b/Website/src/Components/component/Campus.css
@@ -1,5 +1,5 @@
 .camp {
-    padding: 100px 0 0;
+    padding: 100px 0em 3em 0em;
 }
 
 .header-camp {
@@ -30,14 +30,51 @@
     font-family: 'Roboto Slab';
 }
 
+.map {
+    color: white;
+    text-decoration: none;
+    font-size: 3.6rem;
+    padding-top: 6.7rem;
+    padding-left: 16rem;
+    position: absolute;
+    z-index: 209809;
+    font-family: 'Roboto Slab';
+}
+
+.hostel {
+    color: white;
+    text-decoration: none;
+    font-size: 3.6rem;
+    position: absolute;
+    top: 57rem;
+    padding-left: 1.6rem;
+    z-index: 209809;
+    font-family: 'Roboto Slab';
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 .tag1 {
-    color: white;
+    color: rgb(80, 75, 75);
     padding-top: 11rem;
     position: absolute;
     padding-left: 41.5rem;
 
+}
+
+.tag2 {
+    color: rgb(80, 75, 75);
+    padding-top: 11.2rem;
+    position: absolute;
+    padding-left: 33.5rem;
+}
+
+.tag3 {
+    color: rgb(80, 75, 75);
+    position: absolute;
+    padding-left: 41.5rem;
+    z-index: 23532;
+    top: 61.7rem;
 }
 
 .icon {
