--- a/Website/src/Components/component/Foot.css
+++ b/Website/src/Components/component/Foot.css
@@ -4,12 +4,15 @@
     bottom: 0em;
     width: 100%;
     padding: 0em;
+    margin: 0rem;
 }
 
 
 .back {
     filter: blur(0.2em);
     -webkit-filter: blur(0.2em);
+    margin: 0%;
+    padding: 0em;
 }
 
 
